--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,134 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+
+
+
+
+:root {
+    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    --animation-duration: 250ms;
+}
+
+.search-form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0;
+    margin-bottom: 15px;
+    background-color: rgba($color: #07105f, $alpha: 0.9);
+
+    & input {
+        height: 40px;
+        padding: 10px 10px;
+        border-radius: 4px;
+        margin-right: 10px;
+        border: none;
+
+        &:hover,
+        &:focus {
+            outline: 1px solid yellow;
+        }
+    }
+
+    & button {
+        padding: 10px 5px;
+        border-radius: 4px;
+        border: none;
+        background-color: white;
+        cursor: pointer;
+
+        &:hover,
+        &:focus {
+            outline: 1px solid yellow;
+        }
+    }
+}
+
+.gallery {
+    display: grid;
+    max-width: 1277px;
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    grid-auto-rows: 300px;
+    grid-gap: 12px;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.gallery__item {
+    text-decoration: none;
+    color: black;
+    position: relative;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+}
+
+.gallery__image:hover {
+    transform: scale(1.03);
+}
+
+.gallery__image {
+    height: 80%;
+    width: 100%;
+    object-fit: cover;
+    transition: transform var(--animation-duration) var(--timing-function);
+}
+
+.gallery__link {
+    display: block;
+    text-decoration: none;
+    height: 100%;
+}
+
+.gallery__link:hover {
+    cursor: zoom-in;
+}
+
+.info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 5px 5px;
+
+    &-item {
+        margin: 0;
+    }
+
+    &-item:not(:last-child) {
+        margin-right: 5px;
+    }
+}
+
+.load-more {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+
+    padding: 10px 5px;
+    border-radius: 4px;
+    border: none;
+    background-color: #07105f;
+    color: white;
+    cursor: pointer;
+
+    &:hover,
+    &:focus {
+        outline: 1px solid yellow;
+    }
+}
+
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
